# sparkle

./: README.md
ds_controller/: package.xml  setup.cfg  setup.py
ds_controller/ds_controller/: dualsense_controller.py
localization_data/: CMakeLists.txt  package.xml
localization_data/src/: odometry_publisher.cpp
motor_controller/: package.xml  setup.py
motor_controller/motor_controller/: motor_driver (copy).py  motor_driver.py
sparkle_bringup/: package.xml  setup.cfg  setup.py
sparkle_bringup/config/: camera.yaml
sparkle_bringup/launch/: robot_bringup.launch.py
