<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sparkle_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hamed@todo.todo">hamed</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>localization_data</depend>
  <depend>motor_controller</depend>
  <depend>micro_ros_agent</depend>
  <depend>bno055</depend>
  <depend>tf2_ros</depend>
  <depend>rplidar_ros</depend>
  <depend>depthai_ros_driver</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
